# fashioncast

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
models/colour/: lgb_colour.pkl  metrics.json  prophet_bin0.pkl  prophet_bin1.pkl  prophet_bin10.pkl  prophet_bin11.pkl  prophet_bin2.pkl  prophet_bin3.pkl  prophet_bin4.pkl  prophet_bin5.pkl  prophet_bin6.pkl  prophet_bin7.pkl  prophet_bin8.pkl  prophet_bin9.pkl
models/shape/: lgb_shape.pkl  metrics.json  y_pred.npy  y_test.npy
notebooks/: eval_trends.ipynb
notebooks/.ipynb_checkpoints/: eval_trends-checkpoint.ipynb
scripts/: 01_run_all.sh  build_img_features.py  build_season_tables.py  cache_features.py  clean_seasons.py  download_dataset.py  train_colour.py  train_shape.py
src/: __init__.py
src/fashioncast/: __init__.py  clip_labels.py  colour.py  constants.py  season_code.py  split.py
src/fashioncast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
