[project]
name = "fashioncast"
version = "0.0.1"
dependencies = [
    "pandas>=2.0",
    "polars",
    "numpy",
    "opencv-python-headless",
    "torch",
    "timm",
    "lightgbm",
    "prophet",
    "datasets",
    "ruff",
    "black",
    "isort",
    "pre-commit"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}          # root packages are inside 'src/'

[tool.setuptools.packages.find]
include = ["fashioncast", "fashioncast.*"]   # what to ship
